Async chat on Loom