@@ -44,7 +44,7 @@ public interface ChatClient {
     record ClientConnection(Channels.Socket socket) { }
     record Message(String user, String text) {}
 
-    Actor.System system = new Actor.System(Executors.newCachedThreadPool());
+    Actor.System system = new Actor.System(Executors.newVirtualThreadPerTaskExecutor());
     String HOST = "localhost"; int PORT = 4444;
 
     static void main(String[] args) throws IOException {
